# pos-tech

./: .gitignore  LICENSE  README.md
000.warmup/: README.md  lession-1.py  lession-2.py  lession-4.py  pyproject.toml
[0] warmup/: .env  .gitignore  README.md  lession-1.py  lession-3.py  openai_utils.py  pyproject.toml
[0] warmup/dados/: lista_de_compras_10_clientes.csv
[1] phase 1/: README.md
[1] phase 1/004/: text-classifier.py
[2] phase 2/: README.md
[3] phase 3/: README.md
[4] phase 4/: README.md
[5] phase 5/: README.md
